# Krypto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: blank.yml
include/: Encryptor.h  Utils.h  Utils.hpp
src/: Encryptor.cpp  Main.cpp  Utils.cpp
test/: check.c  check.cpp
